--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ But it must have the following features:
       <p>So don't hold back,do what you gotta do</p>
     </div>
     <div id="div2">
-      <img src="./assets/images/train track.jpg" alt="man sitting on a train rail">
+      <img class="show" src="./assets/images/train track.jpg" alt="man sitting on a train rail">
 
       <h1>show up daily</h1>
       <p>You can't be unlucky everyday in a year</p>
